--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -6,14 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#E9C874"
+    android:background="#B0926A"
     tools:context=".DetailActivity">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Bjorwi Pet Shop"
-        android:background="#5F6F52"
+        android:background="#706233"
         android:textStyle="italic"
         android:textSize="30sp"
         android:gravity="center"
@@ -38,6 +38,7 @@
         android:layout_height="wrap_content"
         app:cardCornerRadius="30dp"
         app:cardElevation="20dp"
+        app:cardBackgroundColor="#E1C78F"
         app:cardUseCompatPadding="true"
         >
 
